# trianGL

./: CMakeLists.txt  README.md
lib/glad/include/glad/: gl.h
src/: basic.frag  main.c  main.cpp  shader.hpp
